source/stylesheets/layout.sass
body
  +flexbox
  +flex-direction(column)
  background-color: var(--background-color)
  color: var(--text-color)
  font-family: var(--primary-font)
  height: 100%
  min-height: 100vh

  &.no-scroll
    overflow: hidden
    position: relative

a.skip-link
  +transition(all .3s)
  background: var(--background-color)
  border: 1px solid var(--text-color)
  left: 25px
  padding: 15px 20px
  position: absolute
  text-decoration: underline
  top: -150px
  z-index: 100

  &:focus
    top: 20px

a, a:visited
  color: var(--text-color)
  text-decoration: none
  transition: color .2s linear

  &:hover
    color: var(--link-hover-color)

.button, a.button
  +transition(all .2s linear)
  background-color: var(--button-background-color)
  border-radius: var(--border-radius)
  color: var(--button-text-color)
  height: 60px
  display: flex
  align-items: center
  justify-content: center
  max-width: 275px
  padding: 0 20px
  text-align: center
  white-space: pre-wrap
  width: 100%

  &.minimal-button
    +transform(none)
    background: none
    color: var(--text-color)
    border: none
    padding: 0
    text-decoration: underline
    text-underline-offset: 4px

    &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
      +transform(none)
      box-shadow: none
      background: none
      color: var(--link-hover-color)

  &:disabled, &.disabled
    cursor: not-allowed

  &.centered-button
    margin: 60px auto

  &:not(:disabled):hover, &:not(:disabled):active, &:not(:disabled):focus
    background-color: var(--button-hover-background-color)
    color: var(--button-text-color)

    @media (hover: hover)
      +transform(scale(1.02, 1.02))

h1, h2, h3, h4, h5, h6
  font-weight: normal
  margin: 0
  padding: 0
  text-align: center

h1
  font-size: 2.25em
  margin-bottom: 48px

.wrapper
  margin: 0 auto
  max-width: 1200px
  padding: 0 16px
  width: 100%

#main
  flex: 1
  padding-bottom: 60px
  border-bottom: 1px solid var(--border-color)

.custom-content
  margin: 0 auto
  max-width: 760px
  width: 100%

  p
    margin: revert

  &>:first-child
    margin-top: 0

  &>:last-child
    margin-bottom: 0

  ol, ul
    margin: 1em

  ul
    list-style: disc

  ol
    list-style: decimal

  a
    text-decoration: underline

.lookbook-gallery
  display: flex
  flex-direction: column
  gap: 40px
  text-align: center

.lookbook-gallery-image
  display: block
  width: 100%

.header
  margin-bottom: 80px

  @media screen and (max-width: $break-small)
    margin-bottom: 40px

a.store-link
  color: var(--shop-name-text-color)
  display: block
  font-family: var(--shop-name-font)
  font-size: 2.5em
  line-height: 1.3
  margin: 40px auto
  text-align: center
  overflow-wrap: break-word
  word-break: break-word
  width: 100%

  @media screen and (max-width: $break-small)
    font-size: 1.5em
    margin: 20px auto

.store-logo
  display: block
  margin: 0 auto
  max-width: 100%
  max-height: 90px

  @media screen and (max-width: $break-small)
    max-height: 72px

header, footer
  +flexbox
  +flex-direction(column)
  flex-shrink: 0
  text-align: center

footer
  padding: 60px 0

  .wrapper
    display: flex
    flex-direction: column
    gap: 40px

.footer-store-name
  font-size: 1.5em

.footer__pages
  display: flex
  column-gap: 30px
  max-width: 800px
  flex-wrap: wrap
  margin: 0 auto
  justify-content: center
  row-gap: 12px

  @media screen and (max-width: $break-small)
    flex-direction: column

  a
    display: block
    padding: 2px

    &:hover
      text-decoration: underline

.social-icons
  display: flex
  gap: 20px
  list-style: none
  margin: 0
  padding: 0
  flex-wrap: wrap
  justify-content: center

  @media screen and (max-width: $break-small)
    gap: 16px

  a
    display: flex
    align-items: center
    justify-content: center
    flex-shrink: 0
    width: 36px
    height: 36px

    svg
      fill: currentColor
      height: 22px
      width: 22px

      &.tumblr-icon
        width: 14px

.bigcartel-credit
  line-height: 1em
  font-size: 15px
  display: inline-flex
  align-items: center
  gap: 8px
  outline-offset: 4px
  padding: 2px 0
  text-decoration: none

  &:hover
    text-decoration: none

  &__text
    position: relative

  &__lockup
    display: block
    fill: currentColor
    padding-top: 1px
    width: 80px

.select
  border: 1px solid var(--text-color)
  border-radius: var(--border-radius)
  height: 60px
  max-width: 100%
  padding: 0
  position: relative
  text-transform: uppercase
  width: 100%

  select
    height: 100%
    padding: 0 66px 0 16px
    position: relative
    width: 100%
    z-index: 2

    option
      color: #000

    &:focus
      box-shadow: none

  svg
    +transform(translateY(-50%))
    pointer-events: none
    fill: currentColor
    position: absolute
    right: 20px
    top: 50%
    z-index: 1

.visually-hidden
  border: 0
  clip: rect(0 0 0 0)
  height: 1px
  margin: -1px
  overflow: hidden
  padding: 0
  position: absolute
  width: 1px

.message-banner
  border-radius: var(--border-radius)
  background-color: var(--announcement-background-color)
  color: var(--announcement-text-color)
  padding: 16px
  margin: 0 auto 32px
  text-align: center
  width: 100%
  max-width: 760px

  &--centered
    text-align: center

  &--no-bg
    color: var(--text-color)
    background: none
    padding: 0

  &--errors
    background-color: var(--error-background-color)
    color: var(--error-text-color)

